--- a/demo/Base.lproj/Main.storyboard
+++ b/demo/Base.lproj/Main.storyboard
@@ -126,15 +126,15 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rvw-fd-URd">
-                                <rect key="frame" x="109.5" y="161" width="101" height="30"/>
-                                <state key="normal" title="Configure WiFi"/>
+                                <rect key="frame" x="107" y="161" width="107" height="30"/>
+                                <state key="normal" title="WiFiコンフィグ"/>
                                 <connections>
                                     <action selector="wifiConfigButtonPressed:" destination="ddT-nb-DYf" eventType="touchUpInside" id="mI5-Pr-tPf"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fAG-nO-S28">
-                                <rect key="frame" x="134.5" y="371" width="50" height="30"/>
-                                <state key="normal" title="Unbind">
+                                <rect key="frame" x="114" y="371" width="92" height="30"/>
+                                <state key="normal" title="アンバインド">
                                     <color key="titleColor" red="1" green="0.023286350454939653" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
                                 <connections>
@@ -142,27 +142,53 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7qI-zz-zxW">
-                                <rect key="frame" x="124.5" y="269" width="71" height="30"/>
-                                <state key="normal" title="Read Data"/>
+                                <rect key="frame" x="114" y="269" width="92" height="30"/>
+                                <state key="normal" title="体重情報取得"/>
                                 <connections>
                                     <action selector="readDataButtonPressed:" destination="ddT-nb-DYf" eventType="touchUpInside" id="ZRQ-t4-VYY"/>
                                 </connections>
                             </button>
+                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ed1-4H-djn">
+                                <rect key="frame" x="184" y="435" width="51" height="31"/>
+                                <connections>
+                                    <action selector="secretModeSwitchPressed:" destination="ddT-nb-DYf" eventType="valueChanged" id="ie2-cA-eeD"/>
+                                </connections>
+                            </switch>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="秘密モード" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0q4-pS-hK8">
+                                <rect key="frame" x="67" y="440" width="87" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2rH-mA-uCr">
+                                <rect key="frame" x="139" y="106" width="42" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="7qI-zz-zxW" firstAttribute="leading" secondItem="fAG-nO-S28" secondAttribute="leading" constant="-10" id="9LL-j1-En1"/>
+                            <constraint firstItem="0q4-pS-hK8" firstAttribute="leading" secondItem="wBC-6a-Cte" secondAttribute="leadingMargin" constant="51" id="2B6-Fi-eEL"/>
+                            <constraint firstItem="ed1-4H-djn" firstAttribute="top" secondItem="fAG-nO-S28" secondAttribute="bottom" constant="34" id="3yD-l9-l3c"/>
+                            <constraint firstItem="7qI-zz-zxW" firstAttribute="leading" secondItem="fAG-nO-S28" secondAttribute="leading" id="9LL-j1-En1"/>
+                            <constraint firstItem="0q4-pS-hK8" firstAttribute="centerY" secondItem="ed1-4H-djn" secondAttribute="centerY" id="APB-kg-baP"/>
                             <constraint firstItem="fAG-nO-S28" firstAttribute="top" secondItem="7qI-zz-zxW" secondAttribute="bottom" constant="72" id="AqH-rX-C7V"/>
+                            <constraint firstItem="2rH-mA-uCr" firstAttribute="centerX" secondItem="rvw-fd-URd" secondAttribute="centerX" id="a0y-zV-aIy"/>
+                            <constraint firstItem="rvw-fd-URd" firstAttribute="top" secondItem="2rH-mA-uCr" secondAttribute="bottom" constant="34" id="axd-7G-aCa"/>
                             <constraint firstItem="7qI-zz-zxW" firstAttribute="centerY" secondItem="wBC-6a-Cte" secondAttribute="centerY" id="dwO-mf-Ctm"/>
                             <constraint firstItem="7qI-zz-zxW" firstAttribute="top" secondItem="rvw-fd-URd" secondAttribute="bottom" constant="78" id="eo8-40-2rW"/>
                             <constraint firstItem="rvw-fd-URd" firstAttribute="centerX" secondItem="wBC-6a-Cte" secondAttribute="centerX" id="hHD-HQ-Q3p"/>
-                            <constraint firstItem="rvw-fd-URd" firstAttribute="leading" secondItem="7qI-zz-zxW" secondAttribute="leading" constant="-15" id="iRK-TD-NVV"/>
+                            <constraint firstItem="rvw-fd-URd" firstAttribute="leading" secondItem="7qI-zz-zxW" secondAttribute="leading" constant="-7" id="iRK-TD-NVV"/>
+                            <constraint firstItem="ed1-4H-djn" firstAttribute="leading" secondItem="0q4-pS-hK8" secondAttribute="trailing" constant="30" id="oEB-IC-mpy"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Main Menu" id="fdr-Si-EO8"/>
                     <connections>
                         <outlet property="readDataButton" destination="7qI-zz-zxW" id="szp-wn-2SV"/>
+                        <outlet property="secretModeSwitch" destination="ed1-4H-djn" id="jEn-oX-D63"/>
                         <outlet property="unbindButton" destination="fAG-nO-S28" id="DEI-J5-NqM"/>
+                        <outlet property="userID" destination="2rH-mA-uCr" id="i35-TJ-Z4V"/>
                         <outlet property="wifiConfigButton" destination="rvw-fd-URd" id="Twx-Bs-8dC"/>
                         <segue destination="wMN-eM-Xuy" kind="show" identifier="NavigateToReadData" id="u1I-cX-jlx"/>
                         <segue destination="BYZ-38-t0r" kind="show" identifier="NavigateToWifiConfig" id="cHb-jO-DhW"/>
@@ -185,10 +211,10 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="BcI-bV-mn0">
-                                <rect key="frame" x="0.0" y="64" width="320" height="504"/>
+                                <rect key="frame" x="0.0" y="20" width="320" height="548"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="myCell" id="RNR-80-OJz">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="myCell" id="RNR-80-OJz">
                                         <rect key="frame" x="0.0" y="28" width="320" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="RNR-80-OJz" id="0dS-eO-l0Y">
@@ -327,18 +353,16 @@
                                 </connections>
                             </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lvA-Bt-Hfa">
-                                <rect key="frame" x="27" y="66" width="266" height="482"/>
+                                <rect key="frame" x="27" y="92" width="266" height="385"/>
                                 <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="lvA-Bt-Hfa" firstAttribute="top" secondItem="FO3-5W-0t3" secondAttribute="bottom" constant="8" symbolic="YES" id="AIC-8Z-ORY"/>
-                            <constraint firstItem="lvA-Bt-Hfa" firstAttribute="centerX" secondItem="YYp-yJ-SZM" secondAttribute="centerX" id="Adh-bj-lhj"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="lvA-Bt-Hfa" secondAttribute="trailing" constant="11" id="E5E-S8-zHs"/>
-                            <constraint firstItem="lvA-Bt-Hfa" firstAttribute="leading" secondItem="FO3-5W-0t3" secondAttribute="leading" id="VLj-41-nBa"/>
-                            <constraint firstAttribute="bottom" secondItem="lvA-Bt-Hfa" secondAttribute="bottom" constant="20" symbolic="YES" id="d2e-dd-Ktu"/>
-                            <constraint firstItem="lvA-Bt-Hfa" firstAttribute="leading" secondItem="YYp-yJ-SZM" secondAttribute="leadingMargin" constant="11" id="feU-TY-sRy"/>
+                            <constraint firstAttribute="bottom" secondItem="lvA-Bt-Hfa" secondAttribute="bottom" constant="91" id="1vN-xG-5hC"/>
+                            <constraint firstItem="lvA-Bt-Hfa" firstAttribute="top" secondItem="FO3-5W-0t3" secondAttribute="bottom" constant="34" id="STZ-wV-tza"/>
+                            <constraint firstItem="lvA-Bt-Hfa" firstAttribute="leading" secondItem="FO3-5W-0t3" secondAttribute="leading" id="Ts3-bn-odd"/>
+                            <constraint firstItem="lvA-Bt-Hfa" firstAttribute="centerX" secondItem="YYp-yJ-SZM" secondAttribute="centerX" id="Zra-Ot-WT5"/>
                             <constraint firstItem="FO3-5W-0t3" firstAttribute="leading" secondItem="YYp-yJ-SZM" secondAttribute="leadingMargin" constant="11" id="ru2-TU-f5g"/>
                             <constraint firstItem="FO3-5W-0t3" firstAttribute="top" secondItem="8rm-Hl-02X" secondAttribute="bottom" constant="8" symbolic="YES" id="y96-2U-nOh"/>
                         </constraints>
@@ -350,7 +374,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="f3X-Ba-pah" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-376.875" y="1075"/>
+            <point key="canvasLocation" x="-376.875" y="1074.2957746478874"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="QkB-bX-Gkp">
